Criado através do Colaboratory

--- a/Regre_linear_carro.ipynb
+++ b/Regre_linear_carro.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMB+lOwFv7emv3DM+aol1BY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "_heDRNh1op9Q"
       },
@@ -45,6 +44,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Load car data\n",
+        "\n",
         "dados_carros = pd.read_csv('/content/C+¦pia de CarPrice_Assignment.csv')\n",
         "dados_carros.head()"
       ],
@@ -56,7 +57,7 @@
         "id": "2EEWYu1Orxfk",
         "outputId": "2e38a801-18ce-4c67-a2ce-5e6bf8891639"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -420,7 +421,7 @@
         "id": "gDocWkkWsAWj",
         "outputId": "c352e333-a665-46f5-f78f-a0a3dc42e339"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +476,7 @@
         "id": "t0af_NMDsG2q",
         "outputId": "51677386-dc2a-4e21-9f7d-b6b182429690"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +503,7 @@
         "id": "mvc-NyJDtgid",
         "outputId": "8625a5ea-7d81-4b46-e6db-0b5b2538a9de"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -883,6 +884,10 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "# Encode categorical columns\n",
+        "\n",
+        "\n",
         "colunas_categoricas = ['CarName', 'fueltype', 'aspiration', 'doornumber', 'carbody', 'drivewheel', 'enginelocation', 'fuelsystem']\n",
         "\n",
         "\n",
@@ -892,7 +897,8 @@
         "for coluna in colunas_categoricas:\n",
         "    dados_carros[coluna + '_encoded'] = le.fit_transform(dados_carros[coluna])\n",
         "\n",
-        "# Exibindo as primeiras linhas do DataFrame com as colunas codificadas\n",
+        "# Display the DataFrame with encoded columns\n",
+        "\n",
         "print(dados_carros.head())\n",
         "\n",
         "\n",
@@ -905,7 +911,7 @@
         "id": "FyXYAN27t4B7",
         "outputId": "5cba7c67-177c-4917-b1a2-68030d08c88a"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -957,6 +963,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "# Data visualization with seaborn\n",
         "\n",
         "sns.histplot(data=dados_carros, x='price', kde=True)"
       ],
@@ -968,7 +975,7 @@
         "id": "gL8gbk1p10dm",
         "outputId": "d1d80d9e-fe46-4aea-ca22-bd6ecd1a8ed3"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -995,6 +1002,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Data visualization with seaborn\n",
+        "\n",
         "sns.histplot(data=dados_carros, x='doornumber', kde=True)"
       ],
       "metadata": {
@@ -1005,7 +1014,7 @@
         "id": "keJi7W_x3I6I",
         "outputId": "0dff67d0-0499-41da-8cc9-ff6339821888"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1034,6 +1043,7 @@
       "source": [
         "from sklearn.preprocessing import MinMaxScaler\n",
         "\n",
+        "# Normalize numeric columns\n",
         "\n",
         "colunas_numericas = dados_carros.select_dtypes(include=['float64', 'int64']).columns\n",
         "\n",
@@ -1042,6 +1052,8 @@
         "\n",
         "dados_carros_norm = dados_carros.copy()\n",
         "dados_carros_norm[colunas_numericas] = scaler.fit_transform(dados_carros_norm[colunas_numericas])\n",
+        "\n",
+        "# Display normalized data\n",
         "\n",
         "print(dados_carros_norm.head())\n",
         "\n",
@@ -1057,7 +1069,7 @@
         "id": "_ZZeAxti3uuu",
         "outputId": "b7c1016e-f9c4-42da-eff6-582327eafd1a"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1116,7 +1128,7 @@
         "id": "4xajoriV4xAC",
         "outputId": "140c0f33-b2d0-429e-fe1c-df548cc3e27f"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1577,13 +1589,17 @@
         "import statsmodels.formula.api as smf\n",
         "import pandas as pd\n",
         "\n",
+        "# Linear regression modeling with statsmodels\n",
         "\n",
         "function = ' price ~ symboling +\tCarName +\tfueltype +\taspiration +\tdoornumber +\tcarbody +\tdrivewheel +\tenginelocation +\twheelbase\t+\tenginesize\t+fuelsystem\t+boreratio\t+stroke\t+compressionratio\t+horsepower\t+peakrpm\t+citympg\t+highwaympg'\n",
         "\n",
         "model = smf.ols(formula=function, data=dados_carros_norm).fit()\n",
         "\n",
         "\n",
-        "print(model.summary())\n"
+        "print(model.summary())\n",
+        "\n",
+        "# Linear regression models with different feature sets\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -1592,7 +1608,7 @@
         "id": "wrblvHX55CAM",
         "outputId": "e43df156-f58b-4b2d-8168-f6d24f476ba0"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1818,7 +1834,7 @@
         "id": "86otnCsfDe-Z",
         "outputId": "57279c8d-a542-43f4-fdec-27a40a5b8ece"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1898,7 +1914,7 @@
         "id": "9fM3xQt9DlhU",
         "outputId": "7a6b2b6f-5d89-45ef-a7b6-d87865377384"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1968,7 +1984,7 @@
         "id": "wiOxN8vuDtO6",
         "outputId": "3fdf745b-d980-4d9c-ca77-719d72d6a13f"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2037,7 +2053,7 @@
         "id": "jG5AI_QyECkh",
         "outputId": "1d9ee058-7778-4153-c621-7837fa19a47b"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2105,7 +2121,7 @@
         "id": "weyjTUQCEJFz",
         "outputId": "c5e42472-ba63-48c7-e2ec-891d41c8788d"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2167,7 +2183,7 @@
         "id": "qG46f9KLEWqz",
         "outputId": "35ea40f0-da79-45ec-cada-ddcf2971d514"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2227,7 +2243,7 @@
         "id": "7E0LQu9HEeus",
         "outputId": "f7d35022-e90f-4a71-da8e-e6e22a3059fd"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2287,7 +2303,7 @@
         "id": "nn7DdvvVEhkS",
         "outputId": "92c4740f-5149-46ef-94f0-8e7b77c14006"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2346,7 +2362,7 @@
         "id": "FiV6vq-uEo2S",
         "outputId": "0ac30601-e2ec-4883-8052-7dffdd3bac3f"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2404,7 +2420,7 @@
         "id": "Bsa_rv_-EzzB",
         "outputId": "c3c4e2fe-d423-4e79-9603-1045ecf44d3b"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2450,9 +2466,11 @@
     {
       "cell_type": "code",
       "source": [
+        "# Linear regression modeling with scikit-learn\n",
+        "\n",
+        "\n",
         "x = dados_carros[[ 'CarName\t' 'symboling' , 'aspiration1' ,\t'enginelocation' ,\t'wheelbase'\t,\t'enginesize'\t, 'boreratio'\t, 'stroke'\t, 'horsepower'\t, 'peakrpm']]\n",
-        "y = dados_carros[['price']]\n",
-        ""
+        "y = dados_carros[['price']]\n"
       ],
       "metadata": {
         "id": "VHU_AKbvFn6b"
@@ -2479,7 +2497,7 @@
         "id": "CPHfv5ZuG8H0",
         "outputId": "4bd085aa-2141-4ccb-f074-9c42b437d72e"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2498,19 +2516,12 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "BQ5Rf0FdG_Uf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
+        "# Model evaluation\n",
+        "\n",
+        "\n",
         "r_sqr = lr.score(x, y)\n",
-        "r_sqr\n",
-        ""
+        "r_sqr\n"
       ],
       "metadata": {
         "colab": {
@@ -2519,7 +2530,7 @@
         "id": "A86UlMlfHCOS",
         "outputId": "fead448b-b613-42c8-8f7d-14320aeeb0e9"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2540,8 +2551,7 @@
         "\n",
         "print('MAE:', metrics.mean_absolute_error(y_treino,y_pred_treino))\n",
         "print('MSE:', metrics.mean_squared_error(y_treino,y_pred_treino))\n",
-        "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_treino,y_pred_treino)))\n",
-        ""
+        "print('RMSE:', np.sqrt(metrics.mean_squared_error(y_treino,y_pred_treino)))\n"
       ],
       "metadata": {
         "colab": {
@@ -2550,7 +2560,7 @@
         "id": "UYaOQf8AHQ1E",
         "outputId": "3d2b1d05-76fe-4754-f4a3-d81495fc459f"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2566,6 +2576,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Predictions on the test set\n",
+        "\n",
+        "\n",
         "y_pred_teste = lr.predict(x_teste)\n",
         "\n",
         "print('MAE:', metrics.mean_absolute_error(y_teste,y_pred_teste))\n",
@@ -2579,7 +2592,7 @@
         "id": "h8MMe2deIHSb",
         "outputId": "41abfd1b-94a3-417e-89be-3c8142bdf21c"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
